--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <title>Home | Panda Warden</title>
   </head>
   <body>
+    <div id="background-container"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
